change macOS build to Apple silicon only